# Rusty-L4

./: .gitignore  Cargo.toml  Makefile  grub.cfg
notebook/: Testing no_std static lib is difficult.ipynb
src/: Makefile  gdt.rs  interrupts.rs  lib.rs  linker.ld  main.rs  startup.S  vga_buffer.rs
