[package]
name = "rusty_l4"
version = "0.1.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
spin = "0.4.9"
volatile = "0.2.3"
x86_64 = "0.5.2"
bit_field = "0.9.0"
multiboot2 = "0.7.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-rusty_l4.json"
